--- a/.github/workflows/pod4_github_actions.yml
+++ b/.github/workflows/pod4_github_actions.yml
@@ -13,7 +13,7 @@ jobs:
 
       steps:
         - name: checkout code
-        - uses: actions/checkout@v4
+          uses: actions/checkout@v4
 
         - name: output script
           run: echo Pod4 In the HOWZ!!!
